# xau-pilot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  runbook.md
scripts/: bootstrap.ps1
src/trading_bot/: __init__.py  backtest.py  backtest_cli.py  compare_cli.py  config.py  historical_ai_collect_cli.py  htf_ai.py  htf_ai_cli.py  htf_ai_collect.py  htf_ai_replay.py  main.py  seed_ai_replay_cli.py
src/trading_bot/adapters/: __init__.py  mt5_adapter.py
src/trading_bot/data/: __init__.py
src/trading_bot/risk/: __init__.py
src/trading_bot/strategies/: __init__.py
tests/: test_backtest.py  test_htf_ai.py  test_htf_ai_collect.py  test_htf_ai_replay.py  test_risk.py  test_smoke.py  test_strategies.py
